--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,8 @@
         "libs/modules/egret/egret.d.ts",
         "src/egret3d.d.ts",
         "src/Main.ts",
-        "src/Sample_CreateView3D.ts",
-        "src/Sample_CreateBox.ts",
-        "src/Sample_CreateSky.ts"
+        "src/CreateView3D.ts",
+        "src/CreateBox.ts",
+        "src/CreateSky.ts"
     ]
 }
