引擎恢复-最新的对鼠标事件支持有问题；文字纹理单独实现

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "files": [
         "libs/modules/egret/egret.d.ts",
         "src/egret3d.d.ts",
+        "src/CharTexture.ts",
         "src/Main.ts",
         "src/CreateView3D.ts",
         "src/CreateBox.ts",
