use the newest egret3d from egret3d_1(QQ freinds)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
     "compilerOptions": {
         "module": "commonjs",
-        "target": "es3",
+        "target": "es5",
         "noImplicitAny": false,
-        "outDir": "debug",
         "rootDir": ".",
+        "outDir": "./bin-debug/",
         "sourceMap": false
     },
     "exclude": [
