--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,7 @@
     ],
     "files": [
         "libs/modules/egret/egret.d.ts",
-        "src/egret3d.d.ts",
+        "libs/modules/egret/egret3d.d.ts",
         "src/CharTexture.ts",
         "src/Main.ts",
         "src/CreateView3D.ts",
