add game framework code files for game data

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,8 @@
     "files": [
         "libs/modules/egret/egret.d.ts",
         "libs/modules/egret/egret3d.d.ts",
+        "src/GameDataDriver.ts",
+        "src/FindXDataDriver.ts",
         "src/CharTexture.ts",
         "src/Main.ts",
         "src/CreateView3D.ts",
