--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,6 +12,7 @@
     "files": [
         "libs/modules/egret/egret.d.ts",
         "libs/modules/egret/egret3d.d.ts",
+        "libs/modules/egret/game.d.ts",
         "libs/modules/weixin/weixinapi.d.ts",
         "src/ExtraE3D.ts",
         "src/GameDataDriver.ts",
