add skin base code

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
         "libs/modules/egret/game.d.ts",
         "libs/modules/egret/nest.d.ts",
         "libs/modules/egret/egretsa.d.ts",
+        "libs/modules/egret/eui.d.ts",
         "libs/modules/weixin/weixinapi.d.ts",
         "src/ExtraE3D.ts",
         "src/GameDataDriver.ts",
